Sửa lỗi cache danh mục và thương hiệu