@@ -15,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -62,7 +63,7 @@ public class CategoryServiceImpl implements CategoryService {
         return categoryRepository.findByActiveTrueOrderByNameAsc()
                 .stream()
                 .map(categoryMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
